--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
 	<link rel="stylesheet" type="text/css" href="css.css">
+	<link rel="icon" href="fico.png">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="yuumi">
@@ -14,14 +17,14 @@
 		<a href="#"><div class="tft">Strona główna</div></a>
 		<a href="#"><div class="tft">O nas</div></a>
 		<a href="#"><div class="tft">O projekcie</div></a>
-		<a href="#"><div class="tft">1</div></a>
-		<a href="#"><div class="tft">2</div></a>
-		<a href="#"><div class="tft">3</div></a>
-		<a href="#"><div class="tft">4</div></a>
-		<a href="#"><div class="tft">5</div></a>
-		<a href="#"><div class="tft">6</div></a>
-		<a href="#"><div class="tft">7</div></a>
-		<a href="#"><div class="tft">8</div></a>
+		<a href="#"><div class="tft">Czym są strony internetowe </div></a>
+		<a href="#"><div class="tft">Po co nam strony internetowe </div></a>
+		<a href="#"><div class="tft">Pierwsze strony internetowe </div></a>
+		<a href="#"><div class="tft">Ewolucja stron internetowych</div></a>
+		<a href="#"><div class="tft">Do czego stosuje się strony internetowe </div></a>
+		<a href="#"><div class="tft">Jak tworzy się strony internetowe </div></a>
+		<a href="#"><div class="tft">Języki programowania używane do tworzenia stron </div></a>
+		<a href="#"><div class="tft">Strona z grami</div></a>
 		<a href="#"><div class="tft">Źródła</div></a>
 	</div>
 </body>
