--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 		<p >
 			<h2 id="tit">Krótka historia i zastosowania stron internetowych</h2>
 		</p>
-		<a href="#"><div class="tft">Strona główna</div></a>
-		<a href="#"><div class="tft">O nas</div></a>
-		<a href="#"><div class="tft">O projekcie</div></a>
-		<a href="#"><div class="tft">Czym są strony internetowe </div></a>
-		<a href="#"><div class="tft">Po co nam strony internetowe </div></a>
-		<a href="#"><div class="tft">Pierwsze strony internetowe </div></a>
-		<a href="#"><div class="tft">Ewolucja stron internetowych</div></a>
-		<a href="#"><div class="tft">Do czego stosuje się strony internetowe </div></a>
-		<a href="#"><div class="tft">Jak tworzy się strony internetowe </div></a>
-		<a href="#"><div class="tft">Języki programowania używane do tworzenia stron </div></a>
-		<a href="#"><div class="tft">Strona z grami</div></a>
-		<a href="#"><div class="tft">Źródła</div></a>
+		<a href="#"><div class="tft" id="tu_jestes">Strona główna</div></a>
+		<a href="1.html"><div class="tft">O nas</div></a>
+		<a href="2.html"><div class="tft">O projekcie</div></a>
+		<a href="3.html"><div class="tft">Czym są strony internetowe </div></a>
+		<a href="4.html"><div class="tft">Po co nam strony internetowe </div></a>
+		<a href="5.html"><div class="tft">Pierwsze strony internetowe </div></a>
+		<a href="6.html"><div class="tft">Ewolucja stron internetowych</div></a>
+		<a href="7.html"><div class="tft">Do czego stosuje się strony internetowe </div></a>
+		<a href="8.html"><div class="tft">Jak tworzy się strony internetowe </div></a>
+		<a href="9.html"><div class="tft">Języki programowania używane do tworzenia stron </div></a>
+		<a href="10.html"><div class="tft">Strona z grami</div></a>
+		<a href="11.html"><div class="tft">Źródła</div></a>
 	</div>
 </body>
 </html>
