--- a/1.html
+++ b/1.html
@@ -10,18 +10,31 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="yuumi">
+	<div class="yuumi" id="nom">
 		<p >
 			<h2 id="tit">O nas</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_1
+			Jesteśmy grupą projektową z klasy II Ti, o nazwie Kopytko A.<br> Nasza nazwa wywodzi się od uwielbianej przez nas potrawy jaką są kopytka.<br><br>
+			W skład naszej drużyny wchodzą:
+			<ul>
+				<li>Aleks "Chwast" Bońkowski</li>
+				<li>Kacper "Papcer" Łukaszewski</li>
+				<li>Wiktor "Witold" Krysiński</li>
+				<li>i Michał "Prezydent" Młynarczyk</li>
+			</ul>
+			<img src="kopytko_a.png" alt="obrazek_z_ludźmi_kopytka"><br><br>
+			Jednak oprócz naszej miłości do kopytek, każdy z nas posiada różne zainteresowania w zakresie informatyki,<br>
+			od zamiłowania do podzespołów komputerowych przez tworzenie stron internetowych do pisania gier, programów czy innych skryptów.
 		</p>
 		<div class="wyb">
 		<div id="pusty"></div>
 		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
 		<a href="2.html"><div class="aram">Następny</div></a>
 		</div>
+	</div>
+	<div class="yes">
+		© Kopytko A Team - 2021
 	</div>
 </body>
 </html>
