--- a/11.html
+++ b/11.html
@@ -10,17 +10,21 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="yuumi">
+	<div class="yuumi">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 id="tit">Error 420</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_11
+			Strona ulegnie zmianom,<br>
+			prosimy nie sugerować się jej obecnym wyglądem.
 		</p>
 		<div class="wyb">
 		<a href="10.html"><div class="aram">Poprzedni</div></a>
 		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
 		</div>
+	</div>
+	<div class="yes">
+		© Kopytko A Team - 2021
 	</div>
 </body>
 </html>
