--- a/9.html
+++ b/9.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="yuumi">
+	<div class="yuumi">
 		<p >
 			<h2 id="tit">O nas</h2>
 		</p>
@@ -22,6 +22,9 @@
 		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
 		<a href="10.html"><div class="aram">Następny</div></a>
 		</div>
+	</div>
+	<div class="yes">
+		© Kopytko A Team - 2021
 	</div>
 </body>
 </html>
