--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div id="yuumi">
+	<div class="yuumi">
 		<p >
 			<h2 id="tit">Krótka historia i zastosowania stron internetowych</h2>
 		</p>
@@ -24,8 +24,11 @@
 		<a href="7.html"><div class="tft">Do czego stosuje się strony internetowe </div></a>
 		<a href="8.html"><div class="tft">Jak tworzy się strony internetowe </div></a>
 		<a href="9.html"><div class="tft">Języki programowania używane do tworzenia stron </div></a>
-		<a href="10.html"><div class="tft">Strona z grami</div></a>
-		<a href="11.html"><div class="tft">Źródła</div></a>
+		<a href="10.html"><div class="tft">Źródła</div></a>
+		<a href="11.html"><div class="tft">Dodatek - strona z grami</div></a>
+	</div>
+	<div class="yes">
+		© Kopytko A Team - 2021
 	</div>
 </body>
 </html>
