--- a/2.html
+++ b/2.html
@@ -10,20 +10,20 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">O projekcie</h2>
 		</p>
 		<p>
 			tak, jak najbardziej_2
 		</p>
-		<div class="wyb">
-		<a href="1.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="3.html"><div class="aram">Następny</div></a>
+		<div class="menu">
+		<a href="1.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="3.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
