--- a/3.html
+++ b/3.html
@@ -10,20 +10,35 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">Czym są strony internetowe</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_3
+			Na początek Najlepiej znać datę oraz Kto wymyślił 1 stronę internetową na świecie.<br>
+			Autorem Pierwszych stron internetowych jest Tim Berners-Lee.<br>
+			A pierwsza strona została uruchomiona 6 sierpnia 1991 Roku,<br>
+			przez firmę CERN- Europejska Organizacja Badań Jądrowych.<br>
+			Strona internetowa jest to logicznie uporządkowany zbiór kodu znajdujących się w dokumencie HTML,<br>
+			który jest prezentowany za pomocą prze różnych przeglądarek internetowych,<br>
+			np: Opera, Firefox, Google Chrome, Safari, Brave czy Microsoft Edge.<br>
+			Do Pisania Stron Internetowych wykorzystujemy języki Html, CSS oraz JavaScript.<br>
+			Przeglądając strony internetowe możemy napotkać programy specjalne stworzone do przeglądarek tak zwane "Wtyczki".<br>
+			Każda takie oprogramowanie może być inne to wszystko zależy z jakiej przeglądarki korzystamy.<br><br>
+			Najpopularniejsze Wtyczki są to:<br>
+			<ul>
+				<li>AdBlock</li>
+				<li>Ghostery</li>
+				<li>Google Translator for Firefox</li>
+			</ul>
 		</p>
-		<div class="wyb">
-		<a href="2.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="4.html"><div class="aram">Następny</div></a>
+		<div class="menu">
+		<a href="2.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="4.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
