--- a/4.html
+++ b/4.html
@@ -10,20 +10,44 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">Po co nam strony internetowe</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_4
+			By najpierw dowiedzieć się po co nam strony internetowe w codziennym życiu<br>
+			najpierw potrzeba dowiedzieć się kiedy powstał internet<br>
+			oraz jak nazywali się jego wynalazcy, którzy ułatwili nam życie.<br><br>
+			Wynalazcami Internetu byli:
 		</p>
-		<div class="wyb">
-		<a href="3.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="5.html"><div class="aram">Następny</div></a>
+			<ul>
+				<li>Paul Baran ( Badacz Polskiego Pochodzenia )</li>
+				<li>Joseph Licklider ( Naukowiec Amerykański )</li>
+			</ul>
+		<p>
+			Pierwsze węzły sieci powstały 1969roku W Stanach Zjednoczonych i tą oto date uznaje się za początek internetu.<br>
+			W roku 1970 czyli rok po powstaniu pierwszego węzła sieci<br>
+			Wielka Brytania także stworzyła swoją sieć i została stworzona kolejna w USA.<br>
+			W tym czasie powstała pierwsza poczta elektroniczna jak i pierwszy wysłany e-mail,<br>
+			a jego autorem był Raymond Tomlinson, niestety treść tego maila nie została zarchiwizowana.<br>
+			Pierwszą wyszukiwarką stron WWW na świecie (oraz najbardziej "Prymitywną")<br>
+			był WorldWideWeb (później nazwa zmieniona na Nexus) który powstał w 1990 roku.<br>
+			Wyszukiwarki WWW zmieniały w ciągu lat swoją użyteczność.<br>
+			W niedalekich czasach ludzie wykorzystywali strony internetowe by np: wysyłać maile (do przyjaciół/rodziny)<br>
+			lub by wyszukiwać potrzebne informacje.<br>
+			A 14 lutego 2005 roku powstała strona "Youtube" Która pozwalała ludziom darmowo oglądać/wysyłać filmy.<br>
+			Dzięki temu ludzię mogli zacząć spędzać w internecie jeszcze więcej czasu.<br>
+			W teraźniejszych czasach dzięki stronom internetowych możemy nie tylko oglądać filmy ,<br>
+			wysyłać maile lub wyszukiwać informacjie lecz także reklamować nasze usługi,<br>
+			ponieważ internet jest rzeczą coraz bardziej powszechną.
+		</p>
+		<div class="menu">
+		<a href="3.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="5.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
