--- a/6.html
+++ b/6.html
@@ -10,20 +10,51 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main" id="s6">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">Ewolucja stron internetowych na przestrzeni lat</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_6
+			Jak już wiadomo początkowo strony internetowe nie były bardzo skomplikowane i składały się z niewielkiej liczby prostych elementów.<br>
+			Jednak z biegiem czasu i chęciami do ulepszenia HTML zaczęto dodawać nowe elementy.<br>
+			Niestety początkowo nie były to zawsze elementy ogólnodostępne i używane przez wszystkie przeglądarki,<br>
+			tylko takie tworzone przez twórców przeglądarki na ich własne zachcianki bez porozumień z innymi.<br>
+			Dlatego w celu ustaleniu standardów WWW we wrześniu 1994 roku Tim Berners-Lee założył W3C (World Wide Web Consortium).<br>
+			Z czasem im się przekonać twórców przeglądarek do rezygnacji z różnych indywidualnych znaczników,<br>
+			w celu ujednolicenia wyglądu stron internetowych we wszystkich przeglądarkach.<br>
+			Wprowadzenie tych zmian jednak dało efekt tymczasowy gdyż niedługo kilka przeglądarek wyłamało się i potworzyło własne tagi.<br>
+			Jednak z pojawianiem się nowszych wersji html problem ten został zażegnany,<br>
+			a w czasach obecnych istnieje sposób na zdefiniowanie własnych tagów html, lecz korzystanie z nich może przynieść utrudnienia.<br>
+			Bardzo dużo w stronach internetowych dodał od siebie CSS opracowany przez W3C w 1996 roku,<br>
+			gdyż dodał on wiele możliwości do modyfikowania wyglądu strony.<br>
+			Doszła też również interaktywność wraz z JavaScriptem opracowywanym przez Netscape.<br>
+			Później dzięki php i mysql doszła możliwość zarządzania danymi przez strony internetowe.<br>
+			I tak zaczynając na pierwszej stronie, która składała się z tekstu i odnośników,<br>
+			wraz z rozwojem ludzi w dziedzinie stron internetowych jak i języków służących do ich komponowania<br>
+			było coraz więcej możliwości w tworzeniu przyjaznego środowiska.<br>
+			Jednym z pierwszych popularnych trendów podczas tworzenia stron było stosowanie tabel jako struktury,<br>
+			gdyż było to łatwe do zastosowania i miało przyzwoity wygląd.<br>
+			Z czasem jednak tworzenie stron na tabelach oddało swoje miejsce bardziej interaktywnym divom,<br>
+			które łącząc z magią css-a można sformatować na wiele różnych sposobów.<br>
+			Jednym z powodów tej zmiany było zapotrzebowanie na strony bardziej przyjazne dla oka<br>
+			gdyż otwierało się coraz więcej biznesów online i internet zyskiwał coraz to więcej użytkowników, więc zmiany były wymagane.<br>
+			Za ich responsywność odpowiadał Javascript, który po dziś dzień odgrywa bardzo ważną rolę.<br>
+			Nadal jednak sporo brakowało tym stronom do tych z obecnych czasów, ale na to największy wpływ miał rozwój języków programowania,<br>
+			które z biegiem czasu ciągle są usprawniane i aktualizowane.<br>
+			Obecnie strony internetowe częściej kompilowane są w php jednak dalej przy użyciu języka html, i pełne są skryptów pisanych w javie,<br>
+			często zawierających kod strony zmieniający się zależnie od wykonywanych czynności,<br>
+			oraz pełny css gdyż obecnie bez przyjaznego wyglądu i łatwego do zrozumienia layout-u strona może nie być zachęcająca dla internetowiczów.
+			Przez 30 lat istnienia stron internetowych proces ich tworzenia rozwinął się bardzo mocno,<br>
+			a przy tym wydłużył się gdyż języki używane do ich tworzenia rozrosły się na przestrzeni lat<br>
+			przy okazji dając nam bardzo dużo możliwości, które każdy może wykorzystać na swój sposób.
 		</p>
-		<div class="wyb">
-		<a href="5.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="7.html"><div class="aram">Następny</div></a>
+		<div class="menu">
+		<a href="5.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="7.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
