--- a/7.html
+++ b/7.html
@@ -10,20 +10,32 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">Do czego stosuje się strony internetowe</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_7
+			Do czego może nam posłużyć strona internetowa?<br>
+			Na to pytanie istnieje ogrom odpowiedzi, a wręcz możliwości są nieskończone.<br><br>
+
+			Strony internetowe między innymi wykorzystuje się do:
+			<ul>
+				<!--(do każdego można dorobić odnośniki pokazują przykładową taką stronę, ale to już podczas robienia html)-->
+				<li>Komunikacji (Facebook, NaszaKlasa etc.)</li>
+				<li>Handel (OLX,Allegro, Ebay etc.)</li>
+				<li>Informacyjne (Wp.pl, tvn24.info etc.)</li>
+				<li>Rozrywkowe (Gry.pl, cda.pl etc.)</li>
+				<li>Streamingowe (Netflix, Youtube, Twitch etc.)</li>
+				<li>Biznesowe (Hortex.pl, PepsiCoPoland.com etc.)</li>
+			</ul>
 		</p>
-		<div class="wyb">
-		<a href="6.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="8.html"><div class="aram">Następny</div></a>
+		<div class="menu">
+		<a href="6.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="8.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
