--- a/8.html
+++ b/8.html
@@ -10,20 +10,57 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">O nas</h2>
+			<h2 class="title">Jak tworzy się strony internetowe</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_8
+			Jak stworzyć stronę internetową?<br>
+			Otóż istnieją trzy sposoby tworzenia stron internetowych.<br>
+			Tradycyjnie czyli HTML z dołączeniem elementów CSS,PHP <br>
+			W oparciu o Technologię Flash <br>
+			W oparciu o system CMS<br><br><br>
+			
+			HTML<br>
+			Tak tworzymy najprostszą możliwą stronę z napisem<br>
+			
+
+			No niby wszystko super mamy już naszą pierwszą stronę, lecz nie wygląda ona spektakularnie,<br>
+			więc trzeba ją trochę podrasować, a do tego przyda się CSS.<br>
+			
+			
+			
+			Oczywiście jest to tylko malutki procent możliwości jakie daje nam sam HTML.<br><br>
+			
+			
+			
+			Flash<br>
+			Po pierwsze potrzebujemy tu programu Adobe CS5 lub inną wersje tego programu.<br>			
+			Jako iż nie jesteśmy specjalistami w owej dziedzinie pozwolimy sobie użyczyć Wideo z Youtuba od HowCast.<br>
+			<!--(tu video)-->
+			Finalnie widzimy że i tak tworzy nam się plik HTML, lecz całą pracę wykonaliśmy przy użyciu techniki Flash.<br><br>
+
+			
+			CMS<br>
+			Stworzenie strony w CMS jest wręcz banalne iż pracuje się tu w środowisku graficznym.<br>
+			
+			Idealnym przykładem tworzenia strony w CMS jest strona WebWave czy też Wix.com <br>
+			
+			Wchodzimy na takową stronę rejestrujemy się i mamy do wyboru kilkaset jak nie więcej darmowych gotowych już stron,<br>
+			które możemy dowolnie edytować poprzez przeciąganie rzeczy oraz edycję danych.<br>
+			Możemy także zacząć budowę naszej strony od zera poprzez wykorzystanie kreatora,<br>
+			który to jest przestawiony w video poniżej.
+			
+			<!--tu video-->
+
 		</p>
-		<div class="wyb">
-		<a href="7.html"><div class="aram">Poprzedni</div></a>
-		<a href="index.html"><div id="sg" class="aram">Strona główna</div></a>
-		<a href="9.html"><div class="aram">Następny</div></a>
+		<div class="menu">
+		<a href="7.html"><div class="button2">Poprzedni</div></a>
+		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="9.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
