--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="yuumi">
+	<div class="main">
 		<p >
-			<h2 id="tit">Krótka historia i zastosowania stron internetowych</h2>
+			<h2 class="title">Krótka historia i zastosowania stron internetowych</h2>
 		</p>
-		<a href="#"><div class="tft" id="tu_jestes">Strona główna</div></a>
-		<a href="1.html"><div class="tft">O nas</div></a>
-		<a href="2.html"><div class="tft">O projekcie</div></a>
-		<a href="3.html"><div class="tft">Czym są strony internetowe </div></a>
-		<a href="4.html"><div class="tft">Po co nam strony internetowe </div></a>
-		<a href="5.html"><div class="tft">Pierwsze strony internetowe </div></a>
-		<a href="6.html"><div class="tft">Ewolucja stron internetowych</div></a>
-		<a href="7.html"><div class="tft">Do czego stosuje się strony internetowe </div></a>
-		<a href="8.html"><div class="tft">Jak tworzy się strony internetowe </div></a>
-		<a href="9.html"><div class="tft">Języki programowania używane do tworzenia stron </div></a>
-		<a href="10.html"><div class="tft">Źródła</div></a>
-		<a href="11.html"><div class="tft">Dodatek - strona z grami</div></a>
+		<a href="#"><div class="button" id="tu_jestes">Strona główna</div></a>
+		<a href="1.html"><div class="button">O nas</div></a>
+		<a href="2.html"><div class="button">O projekcie</div></a>
+		<a href="3.html"><div class="button">Czym są strony internetowe </div></a>
+		<a href="4.html"><div class="button">Po co nam strony internetowe </div></a>
+		<a href="5.html"><div class="button">Pierwsze strony internetowe </div></a>
+		<a href="6.html"><div class="button">Ewolucja stron internetowych</div></a>
+		<a href="7.html"><div class="button">Do czego stosuje się strony internetowe </div></a>
+		<a href="8.html"><div class="button">Jak tworzy się strony internetowe </div></a>
+		<a href="9.html"><div class="button">Języki programowania używane do tworzenia stron </div></a>
+		<a href="10.html"><div class="button">Źródła</div></a>
+		<a href="11.html"><div class="button">Dodatek - strona z grami</div></a>
 	</div>
-	<div class="yes">
+	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
