--- a/podstrony/1.html
+++ b/podstrony/1.html
@@ -4,8 +4,8 @@
 	<title>O nas</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -25,13 +25,13 @@
 			</ul>
 		</p>
 		<p>
-			<img src="kopytko_a.png" alt="obrazek_z_ludźmi_kopytka"><br><br>
+			<img src="../grafika/kopytko_a.png" alt="obrazek_z_ludźmi_kopytka"><br><br>
 			Jednak oprócz naszej miłości do kopytek, każdy z nas posiada różne zainteresowania w zakresie informatyki,<br>
 			od zamiłowania do podzespołów komputerowych przez tworzenie stron internetowych do pisania gier, programów czy innych skryptów.
 		</p>
 		<div class="menu">
 		<div id="pusty"></div>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="2.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
