--- a/podstrony/10.html
+++ b/podstrony/10.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Źródła</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
 		</p>
 		<div class="menu">
 		<a href="9.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="11.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
