--- a/podstrony/11.html
+++ b/podstrony/11.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Error 420</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="main">
 		<p >
-			<h2 class="title">Języki programowania używane do tworzenia stron</h2>
+			<h2 class="title">Error 420</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_9
+			Strona ulegnie zmianom,<br>
+			prosimy nie sugerować się jej obecnym wyglądem.
 		</p>
 		<div class="menu">
-		<a href="8.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
-		<a href="10.html"><div class="button2">Następny</div></a>
+		<a href="10.html"><div class="button2">Poprzedni</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		</div>
 	</div>
 	<div class="kopytko">
