--- a/podstrony/3.html
+++ b/podstrony/3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Czym są strony internetowe</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -20,6 +20,7 @@
 			A pierwsza strona została uruchomiona 6 sierpnia 1991 Roku,<br>
 			przez firmę CERN- Europejska Organizacja Badań Jądrowych.<br>
 			Strona internetowa jest to logicznie uporządkowany zbiór kodu znajdujących się w dokumencie HTML,<br>
+			<img src="../grafika/p3/1.png" alt="obrazek_z_kodem_html" class="w2"><br>
 			który jest prezentowany za pomocą prze różnych przeglądarek internetowych,<br>
 			np: Opera, Firefox, Google Chrome, Safari, Brave czy Microsoft Edge.<br>
 			Do Pisania Stron Internetowych wykorzystujemy języki Html, CSS oraz JavaScript.<br>
@@ -34,7 +35,7 @@
 		</p>
 		<div class="menu">
 		<a href="2.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="4.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
