--- a/podstrony/4.html
+++ b/podstrony/4.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Po co nam strony internetowe</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="main">
+	<div class="main" id="s4">
 		<p >
 			<h2 class="title">Po co nam strony internetowe</h2>
 		</p>
@@ -21,8 +21,8 @@
 			Wynalazcami Internetu byli:
 		</p>
 			<ul>
-				<li>Paul Baran ( Badacz Polskiego Pochodzenia )</li>
-				<li>Joseph Licklider ( Naukowiec Amerykański )</li>
+				<li><img src="../grafika/p4/1.png" class="w3"> Paul Baran ( Badacz Polskiego Pochodzenia )</li>
+				<li><img src="../grafika/p4/2.png" class="w3"> Joseph Licklider ( Naukowiec Amerykański )</li>
 			</ul>
 		<p>
 			Pierwsze węzły sieci powstały 1969roku W Stanach Zjednoczonych i tą oto date uznaje się za początek internetu.<br>
@@ -43,7 +43,7 @@
 		</p>
 		<div class="menu">
 		<a href="3.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="5.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
