--- a/podstrony/6.html
+++ b/podstrony/6.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Ewolucja stron internetowych na przestrzeni lat</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -16,18 +16,18 @@
 		</p>
 		<p>
 			Jak już wiadomo początkowo strony internetowe nie były bardzo skomplikowane i składały się z niewielkiej liczby prostych elementów.<br>
+			W celu ustaleniu standardów WWW we wrześniu 1994 roku Tim Berners-Lee założył W3C (World Wide Web Consortium).<br>
 			Jednak z biegiem czasu i chęciami do ulepszenia HTML zaczęto dodawać nowe elementy.<br>
 			Niestety początkowo nie były to zawsze elementy ogólnodostępne i używane przez wszystkie przeglądarki,<br>
+			<img src="../grafika/p6/2.png"><br>
 			tylko takie tworzone przez twórców przeglądarki na ich własne zachcianki bez porozumień z innymi.<br>
-			Dlatego w celu ustaleniu standardów WWW we wrześniu 1994 roku Tim Berners-Lee założył W3C (World Wide Web Consortium).<br>
 			Z czasem im się przekonać twórców przeglądarek do rezygnacji z różnych indywidualnych znaczników,<br>
 			w celu ujednolicenia wyglądu stron internetowych we wszystkich przeglądarkach.<br>
-			Wprowadzenie tych zmian jednak dało efekt tymczasowy gdyż niedługo kilka przeglądarek wyłamało się i potworzyło własne tagi.<br>
-			Jednak z pojawianiem się nowszych wersji html problem ten został zażegnany,<br>
-			a w czasach obecnych istnieje sposób na zdefiniowanie własnych tagów html, lecz korzystanie z nich może przynieść utrudnienia.<br>
+			Obecnie istnieje sposób na zdefiniowanie własnych tagów html, lecz korzystanie z nich może przynieść utrudnienia.<br>
 			Bardzo dużo w stronach internetowych dodał od siebie CSS opracowany przez W3C w 1996 roku,<br>
 			gdyż dodał on wiele możliwości do modyfikowania wyglądu strony.<br>
 			Doszła też również interaktywność wraz z JavaScriptem opracowywanym przez Netscape.<br>
+			<img src="../grafika/p6/3.png"><br>
 			Później dzięki php i mysql doszła możliwość zarządzania danymi przez strony internetowe.<br>
 			I tak zaczynając na pierwszej stronie, która składała się z tekstu i odnośników,<br>
 			wraz z rozwojem ludzi w dziedzinie stron internetowych jak i języków służących do ich komponowania<br>
@@ -35,6 +35,7 @@
 			Jednym z pierwszych popularnych trendów podczas tworzenia stron było stosowanie tabel jako struktury,<br>
 			gdyż było to łatwe do zastosowania i miało przyzwoity wygląd.<br>
 			Z czasem jednak tworzenie stron na tabelach oddało swoje miejsce bardziej interaktywnym divom,<br>
+			<img src="../grafika/p6/4.png"><br>
 			które łącząc z magią css-a można sformatować na wiele różnych sposobów.<br>
 			Jednym z powodów tej zmiany było zapotrzebowanie na strony bardziej przyjazne dla oka<br>
 			gdyż otwierało się coraz więcej biznesów online i internet zyskiwał coraz to więcej użytkowników, więc zmiany były wymagane.<br>
@@ -43,14 +44,14 @@
 			które z biegiem czasu ciągle są usprawniane i aktualizowane.<br>
 			Obecnie strony internetowe częściej kompilowane są w php jednak dalej przy użyciu języka html, i pełne są skryptów pisanych w javie,<br>
 			często zawierających kod strony zmieniający się zależnie od wykonywanych czynności,<br>
-			oraz pełny css gdyż obecnie bez przyjaznego wyglądu i łatwego do zrozumienia layout-u strona może nie być zachęcająca dla internetowiczów.
+			oraz pełny css gdyż obecnie bez przyjaznego wyglądu i łatwego do zrozumienia layout-u strona może nie być zachęcająca dla internetowiczów.<br>
 			Przez 30 lat istnienia stron internetowych proces ich tworzenia rozwinął się bardzo mocno,<br>
 			a przy tym wydłużył się gdyż języki używane do ich tworzenia rozrosły się na przestrzeni lat<br>
 			przy okazji dając nam bardzo dużo możliwości, które każdy może wykorzystać na swój sposób.
 		</p>
 		<div class="menu">
 		<a href="5.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="7.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
