--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Strona Główna</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="css/css.css">
+	<link rel="icon" href="grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -15,17 +15,17 @@
 			<h2 class="title">Krótka historia i zastosowania stron internetowych</h2>
 		</p>
 		<a href="#"><div class="button" id="tu_jestes">Strona główna</div></a>
-		<a href="1.html"><div class="button">O nas</div></a>
-		<a href="2.html"><div class="button">O projekcie</div></a>
-		<a href="3.html"><div class="button">Czym są strony internetowe </div></a>
-		<a href="4.html"><div class="button">Po co nam strony internetowe </div></a>
-		<a href="5.html"><div class="button">Pierwsze strony internetowe </div></a>
-		<a href="6.html"><div class="button">Ewolucja stron internetowych</div></a>
-		<a href="7.html"><div class="button">Do czego stosuje się strony internetowe </div></a>
-		<a href="8.html"><div class="button">Jak tworzy się strony internetowe </div></a>
-		<a href="9.html"><div class="button">Języki programowania używane do tworzenia stron </div></a>
-		<a href="10.html"><div class="button">Źródła</div></a>
-		<a href="11.html"><div class="button">Dodatek - strona z grami</div></a>
+		<a href="podstrony/1.html"><div class="button">O nas</div></a>
+		<a href="podstrony/2.html"><div class="button">O projekcie</div></a>
+		<a href="podstrony/3.html"><div class="button">Czym są strony internetowe </div></a>
+		<a href="podstrony/4.html"><div class="button">Po co nam strony internetowe </div></a>
+		<a href="podstrony/5.html"><div class="button">Pierwsze strony internetowe </div></a>
+		<a href="podstrony/6.html"><div class="button">Ewolucja stron internetowych</div></a>
+		<a href="podstrony/7.html"><div class="button">Do czego stosuje się strony internetowe </div></a>
+		<a href="podstrony/8.html"><div class="button">Jak tworzy się strony internetowe </div></a>
+		<a href="podstrony/9.html"><div class="button">Języki programowania używane do tworzenia stron </div></a>
+		<a href="podstrony/10.html"><div class="button">Źródła</div></a>
+		<a href="podstrony/11.html"><div class="button">Dodatek - strona z grami</div></a>
 	</div>
 	<div class="kopytko">
 		© Kopytko A Team - 2021
