--- a/podstrony/2.html
+++ b/podstrony/2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>O projekcie</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
@@ -15,11 +15,12 @@
 			<h2 class="title">O projekcie</h2>
 		</p>
 		<p>
-			tak, jak najbardziej_2
+			ah no tak, jest to projekt będący projektem.<br>
+			Jest to doprawdy fascynujące.
 		</p>
 		<div class="menu">
 		<a href="1.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="3.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
