--- a/podstrony/8.html
+++ b/podstrony/8.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>O nas</title>
+	<title>Jak tworzy się strony internetowe</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="icon" href="fico.png">
+	<link rel="stylesheet" type="text/css" href="../css/css.css">
+	<link rel="icon" href="../grafika/fico.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="main">
-		<p >
+	<div class="main" id="s8">
+		<p>
 			<h2 class="title">Jak tworzy się strony internetowe</h2>
 		</p>
 		<p>
@@ -19,44 +19,41 @@
 			Otóż istnieją trzy sposoby tworzenia stron internetowych.<br>
 			Tradycyjnie czyli HTML z dołączeniem elementów CSS,PHP <br>
 			W oparciu o Technologię Flash <br>
-			W oparciu o system CMS<br><br><br>
-			
-			HTML<br>
-			Tak tworzymy najprostszą możliwą stronę z napisem<br>
-			
-
+			W oparciu o system CMS
+		</p>
+			<h2>HTML</h2>
+		<p>
+			<img src="../grafika/p8/1.png"><br>
+			Tak tworzymy najprostszą możliwą stronę z napisem "Tekst"<br>
+			<img src="../grafika/p8/2.png" class="w4"><br>
 			No niby wszystko super mamy już naszą pierwszą stronę, lecz nie wygląda ona spektakularnie,<br>
 			więc trzeba ją trochę podrasować, a do tego przyda się CSS.<br>
-			
-			
-			
-			Oczywiście jest to tylko malutki procent możliwości jakie daje nam sam HTML.<br><br>
-			
-			
-			
-			Flash<br>
+			<img src="../grafika/p8/3.png" class="w5">
+			<img src="../grafika/p8/4.png" class="w6"><br>
+			Oczywiście jest to tylko malutki procent możliwości jakie daje nam sam HTML.<br>
+			<img src="../grafika/p8/5.png" class="w4">
+		</p>
+			<h2>Flash</h2>
+		<p>
 			Po pierwsze potrzebujemy tu programu Adobe CS5 lub inną wersje tego programu.<br>			
 			Jako iż nie jesteśmy specjalistami w owej dziedzinie pozwolimy sobie użyczyć Wideo z Youtuba od HowCast.<br>
-			<!--(tu video)-->
-			Finalnie widzimy że i tak tworzy nam się plik HTML, lecz całą pracę wykonaliśmy przy użyciu techniki Flash.<br><br>
-
-			
-			CMS<br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Qn3mDxDqQ1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<br>
+			Finalnie widzimy że i tak tworzy nam się plik HTML, lecz całą pracę wykonaliśmy przy użyciu techniki Flash.
+		</p>
+			<h2>CMS</h2>
+		<p>
 			Stworzenie strony w CMS jest wręcz banalne iż pracuje się tu w środowisku graficznym.<br>
-			
 			Idealnym przykładem tworzenia strony w CMS jest strona WebWave czy też Wix.com <br>
-			
 			Wchodzimy na takową stronę rejestrujemy się i mamy do wyboru kilkaset jak nie więcej darmowych gotowych już stron,<br>
 			które możemy dowolnie edytować poprzez przeciąganie rzeczy oraz edycję danych.<br>
 			Możemy także zacząć budowę naszej strony od zera poprzez wykorzystanie kreatora,<br>
-			który to jest przestawiony w video poniżej.
-			
-			<!--tu video-->
-
+			który to jest przestawiony w video poniżej.<br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/3xnZdhi-smc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</p>
 		<div class="menu">
 		<a href="7.html"><div class="button2">Poprzedni</div></a>
-		<a href="index.html"><div id="main_b" class="button2">Strona główna</div></a>
+		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="9.html"><div class="button2">Następny</div></a>
 		</div>
 	</div>
