--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 	<title>Strona Główna</title>
 	<meta charset="utf-8">
@@ -9,26 +9,48 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=KoHo:ital,wght@1,700&family=Newsreader:wght@500&display=swap" rel="stylesheet">
 </head>
+<!--
+	⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣶⣄⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣄⣀⡀⣠⣾⡇⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀
+⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⢿⣿⣿⡇⠀⠀⠀⠀
+⠀⣶⣿⣦⣜⣿⣿⣿⡟⠻⣿⣿⣿⣿⣿⣿⣿⡿⢿⡏⣴⣺⣦⣙⣿⣷⣄⠀⠀⠀
+⠀⣯⡇⣻⣿⣿⣿⣿⣷⣾⣿⣬⣥⣭⣽⣿⣿⣧⣼⡇⣯⣇⣹⣿⣿⣿⣿⣧⠀⠀
+⠀⠹⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠸⣿⣿⣿⣿⣿⣿⣿⣷⠀
+-->
 <body>
 	<div class="main">
-		<p >
+		<p>
 			<h2 class="title">Krótka historia i zastosowania stron internetowych</h2>
 		</p>
-		<a href="#"><div class="button" id="tu_jestes">Strona główna</div></a>
-		<a href="podstrony/1.html"><div class="button">O nas</div></a>
-		<a href="podstrony/2.html"><div class="button">O projekcie</div></a>
-		<a href="podstrony/3.html"><div class="button">Czym są strony internetowe </div></a>
-		<a href="podstrony/4.html"><div class="button">Po co nam strony internetowe </div></a>
-		<a href="podstrony/5.html"><div class="button">Pierwsze strony internetowe </div></a>
-		<a href="podstrony/6.html"><div class="button">Ewolucja stron internetowych</div></a>
-		<a href="podstrony/7.html"><div class="button">Do czego stosuje się strony internetowe </div></a>
-		<a href="podstrony/8.html"><div class="button">Jak tworzy się strony internetowe </div></a>
-		<a href="podstrony/9.html"><div class="button">Języki programowania używane do tworzenia stron </div></a>
-		<a href="podstrony/10.html"><div class="button">Źródła</div></a>
-		<a href="podstrony/11.html"><div class="button">Dodatek - strona z grami</div></a>
+		<div id="menuButt">
+			<a href="#tu_jestes"><div class="button" id="tu_jestes">Strona główna</div></a>
+			<a href="podstrony/1.html"><div class="button">O nas</div></a>
+			<a href="podstrony/2.html"><div class="button">O projekcie</div></a>
+			<a href="podstrony/3.html"><div class="button">Czym są strony internetowe </div></a>
+			<a href="podstrony/4.html"><div class="button">Po co nam strony internetowe </div></a>
+			<a href="podstrony/5.html"><div class="button">Pierwsze strony internetowe </div></a>
+			<a href="podstrony/6.html"><div class="button">Ewolucja stron internetowych</div></a>
+			<a href="podstrony/7.html"><div class="button">Do czego stosuje się strony internetowe </div></a>
+			<a href="podstrony/8.html"><div class="button">Jak tworzy się strony internetowe </div></a>
+			<a href="podstrony/9.html"><div class="button">Języki programowania używane do tworzenia stron </div></a>
+			<a href="podstrony/10.html"><div class="button">Źródła</div></a>
+			<a href="podstrony/11.html"><div class="button">Dodatkowa zawartość</div></a>
+		</div>
 	</div>
 	<div class="kopytko">
 		© Kopytko A Team - 2021
 	</div>
 </body>
+<!--
+	⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⣷⣦⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⣀⣶⣿⣿⣿⣿⣿⣿⣷⣶⣶⣶⣦⣀⡀⠀⢀⣴⣇⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⢠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀
+⠀⠀⠀⠀⣰⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀
+⠀⠀⠀⣴⣿⣿⣿⣿⠛⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣄⠀⠀⠀
+⠀⠀⣾⣿⣿⣿⣿⣿⣶⣿⣯⣭⣬⣉⣽⣿⣿⣄⣼⣿⣿⣿⣿⣿⣿⣿⣿⣷⡀⠀
+⠀⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄
+⢸⣿⣿⣿⣿⠟⠋⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠁⣿⣿⣿⣿⡿⠛⠉⠉⠉⠉⠁
+⠘⠛⠛⠛⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠛⠛⠃⠀⠀⠀⠀⠀⠀⠀
+-->
 </html>
