--- a/podstrony/1.html
+++ b/podstrony/1.html
@@ -30,7 +30,7 @@
 			od zamiłowania do podzespołów komputerowych przez tworzenie stron internetowych do pisania gier, programów czy innych skryptów.
 		</p>
 		<div class="menu">
-		<div id="pusty"></div>
+		<a href="https://youtu.be/dQw4w9WgXcQ" target="blank" id="rick"><div id="pusty"></div></a>
 		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
 		<a href="2.html"><div class="button2">Następny</div></a>
 		</div>
