--- a/podstrony/11.html
+++ b/podstrony/11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Error 420</title>
+	<title>Dodatkowa zawartość</title>
 	<meta charset="utf-8">
 	<meta name="Authors" content="Kopytko_A_Team">
 	<link rel="stylesheet" type="text/css" href="../css/css.css">
@@ -12,12 +12,25 @@
 <body>
 	<div class="main">
 		<p >
-			<h2 class="title">Error 420</h2>
+			<h2 class="title">Dodatkowa zawartość</h2>
 		</p>
 		<p>
-			Strona ulegnie zmianom,<br>
-			prosimy nie sugerować się jej obecnym wyglądem.
+			Witamy w dodatkowej zawartości,<br>
+			mamy wielką nadzieję, że główna treść naszego projektu<br>
+			nie przyniosła żadnych napadów senności.<br>
 		</p>
+		<p>
+			Jednak jeśli takie napady nastąpiły to serdecznie przepraszamy<br>
+			i w ramach rekompensaty zapraszamy to pogrania w widoczne poniżej gry<br>
+			przygotowane z miłością przez naszego towarzysza Aleksa.<br>
+			Miłego grania!
+		</p>
+		<div id="gry">
+			<a href="gry/snake.html"><div id="snejk">
+				<img src="../grafika/p11/1.png" class="og"><br>
+				Snake
+			</div></a>
+		</div>
 		<div class="menu">
 		<a href="10.html"><div class="button2">Poprzedni</div></a>
 		<a href="../index.html"><div id="main_b" class="button2">Strona główna</div></a>
