--- a/podstrony/2.html
+++ b/podstrony/2.html
@@ -12,11 +12,18 @@
 <body>
 	<div class="main">
 		<p >
-			<h2 class="title">O projekcie</h2>
+			<h2 class="title">Parę słów o projekcie</h2>
 		</p>
 		<p>
-			ah no tak, jest to projekt będący projektem.<br>
-			Jest to doprawdy fascynujące.
+			Nasze cele:<br>
+			- przedstawienie krótkiej historii stron internetowych<br>
+			- zaprezentowanie naszych umiejętności w tworzeniu stron internetowych<br>
+			- zaciekawienie widza<br>
+			- przedstawienie informacji w przystępny sposób<br><br>
+
+
+			Jest również dostępna wersja naszego projektu opublikowana w internetach,<br>
+			można przejść do niej po kliknięciu <a href="https://adriamahitsinoro.github.io/test/index.html" target="blank">tutaj</a>.
 		</p>
 		<div class="menu">
 		<a href="1.html"><div class="button2">Poprzedni</div></a>
