--- a/podstrony/4.html
+++ b/podstrony/4.html
@@ -21,24 +21,24 @@
 			Wynalazcami Internetu byli:
 		</p>
 			<ul>
-				<li><img src="../grafika/p4/1.png" class="w3"> Paul Baran ( Badacz Polskiego Pochodzenia )</li>
-				<li><img src="../grafika/p4/2.png" class="w3"> Joseph Licklider ( Naukowiec Amerykański )</li>
+				<li><img src="../grafika/p4/1.png" class="w3"> Paul Baran ( badacz Polskiego pochodzenia )</li>
+				<li><img src="../grafika/p4/2.png" class="w3"> Joseph Licklider ( naukowiec Amerykański )</li>
 			</ul>
 		<p>
-			Pierwsze węzły sieci powstały 1969roku W Stanach Zjednoczonych i tą oto date uznaje się za początek internetu.<br>
+			Pierwsze węzły sieci powstały 1969roku w Stanach Zjednoczonych i tę oto datę uznaje się za początek internetu.<br>
 			W roku 1970 czyli rok po powstaniu pierwszego węzła sieci<br>
 			Wielka Brytania także stworzyła swoją sieć i została stworzona kolejna w USA.<br>
 			W tym czasie powstała pierwsza poczta elektroniczna jak i pierwszy wysłany e-mail,<br>
 			a jego autorem był Raymond Tomlinson, niestety treść tego maila nie została zarchiwizowana.<br>
-			Pierwszą wyszukiwarką stron WWW na świecie (oraz najbardziej "Prymitywną")<br>
+			Pierwszą wyszukiwarką stron WWW na świecie (oraz najbardziej "prymitywną")<br>
 			był WorldWideWeb (później nazwa zmieniona na Nexus) który powstał w 1990 roku.<br>
 			Wyszukiwarki WWW zmieniały w ciągu lat swoją użyteczność.<br>
 			W niedalekich czasach ludzie wykorzystywali strony internetowe by np: wysyłać maile (do przyjaciół/rodziny)<br>
 			lub by wyszukiwać potrzebne informacje.<br>
-			A 14 lutego 2005 roku powstała strona "Youtube" Która pozwalała ludziom darmowo oglądać/wysyłać filmy.<br>
-			Dzięki temu ludzię mogli zacząć spędzać w internecie jeszcze więcej czasu.<br>
-			W teraźniejszych czasach dzięki stronom internetowych możemy nie tylko oglądać filmy ,<br>
-			wysyłać maile lub wyszukiwać informacjie lecz także reklamować nasze usługi,<br>
+			A 14 lutego 2005 roku powstała strona "Youtube" Która pozwalała ludziom za darmo oglądać/publikować filmy.<br>
+			Dzięki temu ludzie mogli zacząć spędzać w internecie jeszcze więcej czasu.<br>
+			W teraźniejszych czasach dzięki stronom internetowych możemy nie tylko oglądać filmy,<br>
+			wysyłać maile lub wyszukiwać informacje lecz także reklamować nasze usługi,<br>
 			ponieważ internet jest rzeczą coraz bardziej powszechną.
 		</p>
 		<div class="menu">
