--- a/podstrony/6.html
+++ b/podstrony/6.html
@@ -23,12 +23,12 @@
 			tylko takie tworzone przez twórców przeglądarki na ich własne zachcianki bez porozumień z innymi.<br>
 			Z czasem im się przekonać twórców przeglądarek do rezygnacji z różnych indywidualnych znaczników,<br>
 			w celu ujednolicenia wyglądu stron internetowych we wszystkich przeglądarkach.<br>
-			Obecnie istnieje sposób na zdefiniowanie własnych tagów html, lecz korzystanie z nich może przynieść utrudnienia.<br>
-			Bardzo dużo w stronach internetowych dodał od siebie CSS opracowany przez W3C w 1996 roku,<br>
+			Obecnie istnieje sposób na zdefiniowanie własnych tagów HMTL, lecz korzystanie z nich może przynieść utrudnienia.<br>
+			Bardzo dużo w stronach internetowych dodał od siebie CSS, którego pierwszą rekomendację W3C wypuściło w 1996 roku,<br>
 			gdyż dodał on wiele możliwości do modyfikowania wyglądu strony.<br>
 			Doszła też również interaktywność wraz z JavaScriptem opracowywanym przez Netscape.<br>
 			<img src="../grafika/p6/3.png"><br>
-			Później dzięki php i mysql doszła możliwość zarządzania danymi przez strony internetowe.<br>
+			Później dzięki PHP i mysql doszła możliwość zarządzania danymi przez strony internetowe.<br>
 			I tak zaczynając na pierwszej stronie, która składała się z tekstu i odnośników,<br>
 			wraz z rozwojem ludzi w dziedzinie stron internetowych jak i języków służących do ich komponowania<br>
 			było coraz więcej możliwości w tworzeniu przyjaznego środowiska.<br>
@@ -42,7 +42,7 @@
 			Za ich responsywność odpowiadał Javascript, który po dziś dzień odgrywa bardzo ważną rolę.<br>
 			Nadal jednak sporo brakowało tym stronom do tych z obecnych czasów, ale na to największy wpływ miał rozwój języków programowania,<br>
 			które z biegiem czasu ciągle są usprawniane i aktualizowane.<br>
-			Obecnie strony internetowe częściej kompilowane są w php jednak dalej przy użyciu języka html, i pełne są skryptów pisanych w javie,<br>
+			Obecnie strony internetowe częściej kompilowane są w PHP jednak dalej przy użyciu języka HMTL, i pełne są skryptów pisanych w Javie,<br>
 			często zawierających kod strony zmieniający się zależnie od wykonywanych czynności,<br>
 			oraz pełny css gdyż obecnie bez przyjaznego wyglądu i łatwego do zrozumienia layout-u strona może nie być zachęcająca dla internetowiczów.<br>
 			Przez 30 lat istnienia stron internetowych proces ich tworzenia rozwinął się bardzo mocno,<br>
