--- a/podstrony/8.html
+++ b/podstrony/8.html
@@ -18,7 +18,7 @@
 			Jak stworzyć stronę internetową?<br>
 			Otóż istnieją trzy sposoby tworzenia stron internetowych.<br>
 			Tradycyjnie czyli HTML z dołączeniem elementów CSS,PHP <br>
-			W oparciu o Technologię Flash <br>
+			W oparciu o technologię Flash <br>
 			W oparciu o system CMS
 		</p>
 			<h2>HTML</h2>
