--- a/podstrony/10.html
+++ b/podstrony/10.html
@@ -15,7 +15,25 @@
 			<h2 class="title">Źródła</h2>
 		</p>
 		<p>
-			Wikipedia
+			<!--Wikipedia rzondzi-->
+			<a href="https://pl.wikipedia.org" target="blank">Wikipedia</a><br>
+			<a href="https://www.smamarketing.net" target="blank">Sma marketing</a><br>
+			<a href="https://www.smashingmagazine.com" target="blank">Smashingmagazine</a><br>
+			<a href="https://archive.org/web/" target="blank">Wayback Machine</a><br>
+			<a href="http://info.cern.ch/hypertext/WWW/TheProject.html" target="blank">Strona omawiająca projekt WWW</a><br>
+			<a href="https://home.cern/science/computing/birth-web/short-history-web" target="blank">CERN</a><br>
+			<a href="https://stackoverflow.com" target="blank">Stackoverflow</a><br>
+			<a href="https://webfoundation.org" target="blank">Webfoundation.org</a><br>
+			<a href="https://www.w3.org" target="blank">W3.org</a><br>
+			<a href="https://www.w3schools.com/" target="blank">W3Schools</a><br>
+			<a href="https://www.4rtweb.pl" target="blank">4rtweb</a><br>
+			<a href="http://webref.pl/" target="blank">Webref</a><br>
+			<a href="https://danielpietrasik.pl/" target="blank">danielpietrasik.pl</a><br>
+			<a href="https://css-tricks.com/" target="blank">CSS tricks</a><br>
+			<a href="https://sukcesstrony.pl" target="blank">Sukces strony</a><br>
+			<a href="https://mixedmedia.pl" target="blank">Mixed media</a><br>	
+			<a href="https://www.w3.org/People/Raggett/book4/ch01.html" target="blank">Rozdział pierwszy książki &nbsp; 'Raggett on HTML 4"</a><br>		
+			<a href="https://www.w3.org/People/Raggett/book4/ch02.html" target="blank">Rozdział drugi książki &nbsp; 'Raggett on HTML 4"</a><br>	
 		</p>
 		<div class="menu">
 		<a href="9.html"><div class="button2">Poprzedni</div></a>
