--- a/podstrony/5.html
+++ b/podstrony/5.html
@@ -15,20 +15,22 @@
 			<h2 class="title">Pierwsze strony internetowe</h2>
 		</p>
 		<p>
-			Pierwsza strona internetowa została opublikowana 6 sierpnia 1991 roku przez Tima Bernersa-Lee, pod adresem <a href="http://info.cern.ch/hypertext/WWW/TheProject.html" target="blank">http://info.cern.ch</a>,<br> były na niej zawarte informacje na temat projektu World Wide Web, w skrócie W3.<br> Została napisana w czystym html-u, który również został opracowany przez Bernersa-Lee w oparciu na SGML.<br>
+			Pierwsza strona internetowa została opublikowana 6 sierpnia 1991 roku przez Tima Bernersa-Lee, pod adresem <a href="http://info.cern.ch/hypertext/WWW/TheProject.html" target="blank">http://info.cern.ch</a>,<br> były na niej zawarte informacje na temat projektu World Wide Web, w skrócie W3.<br> Została napisana w czystym HTML-u, który również został opracowany przez Bernersa-Lee w oparciu na SGML.<br>
 			Wyglądała ona podobnie do tej:<br><br>
 			<img src="../grafika/p5/1.png" alt="pierwsza_strona_internetowa" class="w1"><br><br>
 			Niestety nie ma żadnej kopii ani zrzutu ekranu przedstawiającego jej pierwotną wersję.<br>
 			Przez pierwsze dwa lata strony internetowe nie były czymś co mógł tworzyć każdy,<br>
 			dopiero w kwietniu 1993 roku CERN opublikował orzeczenie,<br>
 			i udostępnił World Wide Web dla publiki do wolnego użytku bez dodatkowych kosztów.<br>
-			Według informacji ze strony internetlivestats.com liczba stron internetowych ze 130 w roku 1993 wzrosła do aż 2738 w 1994r.<br>
+			Według informacji ze strony <a href="https://internetlivestats.com" target="blank">internetlivestats.com</a> liczba stron internetowych ze 130 w roku 1993 wzrosła do aż 2738 w 1994r.<br>
 			niosąc ze sobą powstanie między innymi Yahoo czy stronę Microsoftu.<br>
 			Miały one prostą i nieprzekombinowaną budowę, wykorzystywały protokoły HTTP<br>
 			jak i Gopher który dawał dostęp do plików poprzez menu hipertekstowe prezentowane w stylu systemu plików.<br>
 			Nie były to strony zapierające dech swoim wyglądem gdyż jeszcze nie było CSS,<br>
 			a w samym HTML nie było zbyt wielu opcji dotyczących wyglądu,<br>
-			lecz nie można im odmówić tego że spełniały swoje zamierzone role.
+			lecz nie można im odmówić tego że spełniały swoje zamierzone role.<br>
+			A dzięki stronie <a href="https://archive.org/web/">Internet Archive Wayback Machine </a> jesteśmy w stanie zobaczyć zapisy stron<br>
+			z różnych okresów czasu.  
 		</p>
 		<p>
 			Dla przykładu oto parę stron:<br>
